--- a/BG_Modeling/fit_BG.ipynb
+++ b/BG_Modeling/fit_BG.ipynb
@@ -649,6 +649,26 @@
     "idx = [idx_worst-100,idx_worst,idx_worst+100]\n",
     "plot_empirical_vs_theoretical(bg, theta_spy, n=3, days=idx)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9213d44b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4330\n",
+      "4330\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(maxT)\n",
+    "print(bg.T)"
+   ]
   }
  ],
  "metadata": {
