--- a/BG_Modeling/fit_BG.ipynb
+++ b/BG_Modeling/fit_BG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b3c996b1",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\yoshi\\OneDrive\\Desktop\\Research\\Multivariate FIR\\Multivariate-Investments-1\\BG_Modeling\n",
       "cuda is available:  True\n",
       "GPU name:  NVIDIA GeForce RTX 4070 Laptop GPU\n"
      ]
@@ -28,10 +29,16 @@
     "from IPython.display import display\n",
     "%matplotlib inline\n",
     "\n",
-    "from Models import BG\n",
+    "# import os, sys\n",
+    "# root_path = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "# sys.path.append(root_path)\n",
     "\n",
-    "import os\n",
-    "os.makedirs(\"estimates\", exist_ok=True)\n"
+    "import sys, os\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
+    "os.makedirs(\"estimates\", exist_ok=True)\n",
+    "\n",
+    "from Models import BG\n",
+    "\n"
    ]
   },
   {
@@ -155,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "853c091a",
    "metadata": {},
    "outputs": [
@@ -199,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d57c68f6",
    "metadata": {},
    "outputs": [
@@ -234,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "15423734",
    "metadata": {},
    "outputs": [
@@ -266,26 +273,6 @@
     "figures = bg.plot_empirical_vs_theoretical(theta_spy=theta_spy, n=2, days=idx, returnfig=True)\n",
     "for fig in figures:\n",
     "    display(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "9213d44b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4330\n",
-      "4330\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(maxT)\n",
-    "print(bg.T)"
    ]
   }
  ],
