Reorganized all models under new modeling folder

--- a/Modeling/BG_Modeling/fit_BG.ipynb
+++ b/Modeling/BG_Modeling/fit_BG.ipynb
@@ -29,12 +29,10 @@
     "from IPython.display import display\n",
     "%matplotlib inline\n",
     "\n",
-    "# import os, sys\n",
-    "# root_path = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    "# sys.path.append(root_path)\n",
-    "\n",
+    "# Set up paths for the new folder structure\n",
     "import sys, os\n",
-    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
+    "# Go up two levels: BG_Modeling -> Modeling -> Systematic-Equity-Strategies (project root)\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\", \"..\")))\n",
     "os.makedirs(\"estimates\", exist_ok=True)\n",
     "\n",
     "from Models import BG\n",
